--- a/_posts/2022-09-22-klaytn.md
+++ b/_posts/2022-09-22-klaytn.md
@@ -1,7 +1,7 @@
 ---
 title: "Klaytn ETL Intro"
 date: 2022-09-23 00:00:00 -0400
-categories: Klaytn ETL
+categories: Klaytn
 ---
 
 # Klaytn ETL and BigQuery Introduction
